[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/theme/Complete_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/theme/FailureTitle_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/theme/UI_theme.tres" type="Theme" id=3]
[ext_resource path="res://script/UI/Failure/Failure.gd" type="Script" id=4]
[ext_resource path="res://src/img/UI/Failure/Try.png" type="Texture" id=5]
[ext_resource path="res://src/img/UI/Failure/home_normal.png" type="Texture" id=6]

[node name="Failure" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )

[node name="TextureRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.584314 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 128.0
margin_top = 96.0
margin_right = 896.0
margin_bottom = 544.0
mouse_filter = 2

[node name="DiedLabel" type="Label" parent="VBoxContainer"]
margin_left = 66.0
margin_right = 702.0
margin_bottom = 81.0
size_flags_horizontal = 4
theme = ExtResource( 2 )
text = "YOU DIED"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_left = 212.0
margin_top = 131.0
margin_right = 556.0
margin_bottom = 327.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6
columns = 2

[node name="Score" type="Label" parent="VBoxContainer/GridContainer"]
margin_right = 273.0
margin_bottom = 96.0
theme = ExtResource( 1 )
text = "SCORE "

[node name="CollectionNum" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 277.0
margin_right = 344.0
margin_bottom = 96.0
theme = ExtResource( 1 )
text = "12"

[node name="Death" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 100.0
margin_right = 273.0
margin_bottom = 196.0
theme = ExtResource( 1 )
text = "DEATH  "

[node name="DeathTime" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 277.0
margin_top = 100.0
margin_right = 344.0
margin_bottom = 196.0
theme = ExtResource( 1 )
text = "12"

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 378.0
margin_right = 768.0
margin_bottom = 448.0
mouse_filter = 2

[node name="Try" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 153.0
margin_right = 229.0
margin_bottom = 70.0
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource( 3 )
icon = ExtResource( 5 )

[node name="Home" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 539.0
margin_right = 615.0
margin_bottom = 70.0
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource( 3 )
icon = ExtResource( 6 )

[connection signal="pressed" from="VBoxContainer/VBoxContainer/Try" to="." method="_on_Try_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Home" to="." method="_on_Home_pressed"]
